# stress-test-locust

./: .dockerignore  .env  .gitignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  locust.conf  makefile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test.py
.github/workflows/: build_test.yml  ci.yml  test_container.yml
common/: auth.py  settings.py
commons/: auth.py  settings.py
dockerfiles/python310/: Dockerfile
dockerfiles/python311/: Dockerfile
dockerfiles/python312/: Dockerfile
dockerfiles/python38/: Dockerfile
dockerfiles/python39/: Dockerfile
locustfiles/: bdt_convert.py  locustfile.py  rs_convert.py
scripts/: linter.sh  run.sh  update.py
src/: locust.conf  locustfile.py  settings.py  setup.py
src/locustfiles/: bdt_convert.py  rs_convert.py
tests/: test_integration.py  test_settings.py  test_setup.py
