[tool.poetry]
name = "stress-test-locust"
version = "0.1.0"
description = ""
authors = ["rednafi <redowan.nafi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
locust = "^1.4.3"
konfik = "^2.0.5"
isort = "^5.8.0"
httpx = "^0.17.1"
black = "^21.4b2"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
isort = "^5.6.4"
pytest = "^6.2.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Third-party configs
[tool.black]
line-length = 88

[tool.isort]
profile = "black"
atomic = true
